# llm-connector-hub

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmrc  Cargo.toml  Dockerfile  Makefile  PHASE_2A_COMPLETION_REPORT.md  PHASE_2B_COMPLETION_REPORT.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: BENCHMARKING_SUITE.md  README.md  cache-benchmark.ts  config.ts  hub-benchmark.ts  index.ts  load-test.ts  middleware-benchmark.ts  provider-benchmark.ts  reporter.ts  setup.ts  stress-test.ts
config/: prometheus.yml
config/grafana/provisioning/dashboards/: default.yml
connector-hub-benchmarks/: .gitignore  COMPLIANCE_REPORT.md  Cargo.toml  README.md
connector-hub-benchmarks/benches/: connector_benchmarks.rs
connector-hub-benchmarks/benchmarks/output/: summary.md
connector-hub-benchmarks/benchmarks/output/raw/: .gitkeep  results-20251202_050614.json
connector-hub-benchmarks/src/: lib.rs
connector-hub-benchmarks/src/adapters/: cache_operations.rs  middleware_pipeline.rs  mod.rs  provider_resolution.rs  request_transformation.rs  stream_parsing.rs
connector-hub-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/adapters/: config.rs  mod.rs  schema.rs  telemetry.rs
deployment/: README.md
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  poddisruptionbudget.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  CICD_DEPLOYMENT_SUMMARY.md  DATA_MODELS.md  DEPLOYMENT.md  DOCS_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_PRODUCTION_REPORT.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INFRASTRUCTURE.md  INTEGRATION_DIAGRAMS.md  INTEGRATION_SPECIFICATIONS.md  INTEGRATION_SUMMARY.md  NPM_PACKAGES.md  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PRODUCTION_STATUS.md  PROJECT_SETUP_SUMMARY.md  PUBLISHING.md  QUICK_START.md  SETUP_COMPLETE.md  SPARC_ARCHITECTURE.md  STATUS.md  TRAIT_SPECIFICATIONS.md  WORKSPACE_STRUCTURE.md  getting-started.md
docs/api/: README.md  models.md
docs/architecture/: README.md  design-patterns.md
docs/deployment/: README.md  security.md
docs/performance/: README.md  benchmarks.md  monitoring.md  optimization-guide.md
docs/user-guide/: README.md  caching.md  configuration.md  error-handling.md  health-monitoring.md  middleware.md  providers.md  streaming.md
examples/: EXAMPLES_SUMMARY.md  README.md  advanced-features.ts  basic-completion.ts  multi-provider.ts  production-ready.ts  simple-usage.ts  streaming-completion.ts  streaming-example.ts  with-middleware.ts
plans/: SPARC_SPECIFICATION.md
scripts/: build.sh  deploy.sh  lint.sh  publish.sh  setup-packages.sh  test.sh  version-bump.sh
scripts/performance/: analyze-results.ts  run-benchmarks.sh  run-load-tests.sh
tests/: README.md
tests/core/: errors.test.ts  utils.test.ts
