[workspace]
resolver = "2"
members = [
    "crates/core",
    "connector-hub-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM-Dev-Ops Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LLM-Dev-Ops/connector-hub"

# Shared dependencies across workspace
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Upstream compile-time dependencies (git dependencies)
schema-registry-core = { git = "https://github.com/LLM-Dev-Ops/schema-registry", branch = "main" }
llm-config-core = { git = "https://github.com/LLM-Dev-Ops/config-manager", branch = "main" }
llm-observatory-core = { git = "https://github.com/LLM-Dev-Ops/observatory", branch = "main" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
