[package]
name = "connector-hub-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical benchmark suite for LLM Connector Hub - TS/Rust bridging benchmarks"
keywords = ["benchmarks", "llm", "connector-hub", "performance"]
categories = ["development-tools::profiling"]

[lib]
name = "connector_hub_benchmarks"
path = "src/lib.rs"

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"

[dependencies]
# Can now reference workspace sibling (optional for benchmarks)
# connector-hub-core = { path = "../crates/core" }

# Workspace-managed dependencies
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "connector_benchmarks"
harness = false
