[package]
name = "connector-hub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for LLM Connector Hub - compile-time foundation"
keywords = ["llm", "connector-hub", "core", "types"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "connector_hub_core"
path = "src/lib.rs"

[dependencies]
# Workspace-managed common dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

# Upstream compile-time dependencies - Phase 2A mandatory requirements
schema-registry-core.workspace = true
llm-config-core.workspace = true
llm-observatory-core.workspace = true

# Phase 2B runtime dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio.workspace = true
